--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>mahout-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceencoding>UTF-8</project.build.sourceencoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.mahout</groupId>
@@ -25,6 +31,13 @@
         <dependency>
             <groupId>org.apache.mahout</groupId>
             <artifactId>mahout-integration</artifactId>
+            <version>0.11.0</version>
+        </dependency>
+
+        <!-- for GroupLensDataModel -->
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-examples</artifactId>
             <version>0.11.0</version>
         </dependency>
 
